added Spring integration